--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 
 /* Apply Font */
 main {
-  font-family: 'Abril Fatface', cursive;
+  font-family: 'Sharpie';
   font-size: 5vmin;
   text-align: center;
   
