changed font in css

--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,9 @@ body {
 
 /* Apply Font */
 main {
-  font-family: 'Sharpie';
+  font-family: 'Fondamento';
   
-  font-size: 5vmin;
+  font-size: 24px;
   text-align: center;
   
   /* Add contrast to text */
