--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 body {  
   
   font-family: 'Abril Fatface';
-  color: silver;
+  color: white;
   font-size: 24px;
 
   /* Horizontal and Vertical Center */
